<resources>
    <string name="app_name">Itagui</string>
    <string name="titleAdvertising">¡Ven a Itagüí!</string>
    <string name="titleAbout">Acerca de</string>
    <string name="text1Advertising">Itagüí, una ciudad segura y activa, que cuenta con un amplio sector comercial y recreacional; una ciudad acogedora, donde podrás disfrutar de sus renovados parques, de la naturaleza de su corregimiento y de los diferentes sitios de esparcimiento. ¡Ven y vívelo!</string>
    <string name="titleHotels">Hoteles</string>
    <string name="text1Hotels">El Hotel Ruiseñor cuenta con 25 años de experiencia al servicio empresarial, el turismo y la familia. Está ubicado en el corazón de Itagüí cerca a grandes complejos industriales y comerciales: Bancos, Clínicas, Hospitales, Iglesias y lo más importante El Metro.</string>
    <string name="text2Hotels">HOTEL ALCARAVAN cuenta con 96 habitaciones de 1, 2 ó 3 camas, parqueadero cubierto totalmente gratis, servicio de lavandería, restaurante, room service, sala de internet, WIFI, estación de café, bar, Zona húmeda, Jacuzzi, turco, juegos de mesa, billar y una excelente vista de la ciudad. Situado en un punto estratégico de la ciudad, en la Carrera 50A número 84 - 09, contiguo a la central mayorista, a 5 minutos de la Terminal del sur y el aeropuerto Olaya herrera, cerca de la estación del metro Ayurá y al centro de la confección y la moda.</string>
    <string name="text3Hotels">El hotel está ubicado en la ciudad industrial de Colombia (Itagüí) , sector de gran actividad empresarial. Contamos con 102 confortables habitaciones y las más modernas instalaciones. El Hotel Central Plaza es la más elegante y con mejor atención de toda la zona. Estamos en medio de centros comerciales, cerca de la Estación Metro Ayurá, sitios de diversión, entidades bancarias, y fácil acceso a los municipios vecinos: Envigado y Sabaneta; así mismo a sólo 15 minutos de la zona rosa de Medellín y a 20 minutos del Centro de Convenciones de la capital antioqueña, Plaza Mayor.</string>
    <string name="button_return">Volver</string>
    <string name="titleBars">Bares</string>
    <string name="text1Bars">Ubicado en una zona estratégica del Municipio de Itagüí, FONDA LA MALAGUEÑA es un hermoso rincón donde venir, compartir y disfrutar, el lugar ideal donde festejar y pasar un rato fuera de la rutina. ¡Te Esperamos!.</string>
    <string name="text2Bars">Mi Pueblo: La mejor representación de una fonda caminera en los tiempos de “upa” enmarcada por las características de un pueblo montañero y sus personajes de antaño. Cañahuate: Un sitio ancestral, con la mas alucinante decoración del viejo oeste, donde toman vida  indios, vaqueros,  carruajes y las diferentes aventuras al mejor estilo western.</string>
    <string name="text3Bars">Disfrute el paisaje y ambiente Antioqueño plasmado en la escencia que lo rodea como los encantos artisticos que tiene para contar la historia de nuestro pueblo puesta ante sus ojos. La estructura y la decoración de la Fonda Bitaguí son un memorial de la riqueza cultural, los recuerdos de un Itaguí durante el año 1919, donde se encuentran cuadros y fotografías muy valorados por su antiguedad.</string>
    <string name="titleTourist">Sitios Turísticos</string>
    <string name="text1Tourist">Una montaña que piensa. ¡Quién lo iba a creer… Y un espacio donde se llega a soñar, a reír, a aplaudir y, en el mejor de los casos, a abrazarse, tomarse de la mano y reconciliarse con el vecino, con el amigo que un día se alejó por la confrontación o con el que se han compartido vivencias, olvido, abandono.</string>
    <string name="text2Tourist">Ditaires es un barrio tradicional clase media-alta de la ciudad de Itagüí, Colombia.1 Fue nombrado así en honor a Benedikta zür Nieden conocida como Doña Dita, esposa de Diego Echavarría Misas, empresario filántropo itagüiseño que donó gran parte de su dinero a los municipios del Valle de Aburrá. En el barrio se encuentran la Casa de la Cultura de Itagüí, el Estadio Metropolitano Ciudad de Itagüí y el Coliseo de Itagüí.  Su principal cualidad son sus zonas verdes y la pacífica convivencia de sus habitantes, que en su mayoría son empleados de las principales empresas itagüiseñas y estudiantes.</string>
    <string name="text3Tourist">El municipio que es el centro de la moda en Colombia se llama Itagüí. Compradores mayoristas y minoristas de diferentes ciudades recorren grandes distancias para llegar a este lugar que esconde en sus adentros lo mejor en confecciones y textiles.  Desde octubre los almacenes comerciales inician los preparativos. Todo comienza con el incremento de personal, la remodelación de los locales, la compra de mercancía y la realización de estrategias promocionales de los productos.</string>
    <string name="titleDemography">Demografía</string>
    <string name="text1Demography">Población: 258.520 habitantes. Densidad poblacional: 13.545 habitantes por kilómetro cuadrado. Hombres: 47.2%, Mujeres: 52.8%. Analfabetismo para mayores de 5 años: 4.9%. Cobertura energía eléctrica: 98.9%. Acueducto: 97.5%. Telefonía: 94.7%. Estrato socieconómico: 1: 6.0%, 2: 41.7%, 3: 51.2%, 4: 1.1%. Etnografía: Mestizos y blancos: 93.9%, Afrocolombianos: 6.1%.</string>
    <string name="text1About">Itagüí v. 1.1.0 - 05042016.</string>
    <string name="text2About">Juan David Jiménez García. Todos los derechos reservados.</string>
</resources>
