<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.jimenez.jdavid.itagui.BarsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="30dp"
        android:text="@string/titleBars"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <Spinner
            android:id="@+id/spinner_bars"
            android:entries="@array/array_bars"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="3">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120sp"
            android:id="@+id/image1Bars"
            android:visibility="visible"
            android:background="@drawable/image1_bars"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120sp"
            android:id="@+id/image2Bars"
            android:visibility="gone"
            android:background="@drawable/image2_bars"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120sp"
            android:id="@+id/image3Bars"
            android:visibility="gone"
            android:background="@drawable/image3_bars"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="6">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textSize="18dp"
            android:visibility="visible"
            android:id="@+id/text1Bars"
            android:text="@string/text1Bars"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textSize="18dp"
            android:visibility="gone"
            android:id="@+id/text2Bars"
            android:text="@string/text2Bars"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textSize="18dp"
            android:visibility="gone"
            android:id="@+id/text3Bars"
            android:text="@string/text3Bars"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_return"
            android:text="@string/button_return"/>
    </LinearLayout>

</LinearLayout>
