<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.jimenez.jdavid.itagui.HotelsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="30dp"
        android:text="@string/titleHotels"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <Spinner
            android:id="@+id/spinner_hotels"
            android:entries="@array/array_hotels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="3">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120sp"
            android:id="@+id/image1Hotels"
            android:visibility="visible"
            android:background="@drawable/image1_hotels"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120sp"
            android:id="@+id/image2Hotels"
            android:visibility="gone"
            android:background="@drawable/image2_hotels"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120sp"
            android:id="@+id/image3Hotels"
            android:visibility="gone"
            android:background="@drawable/image3_hotels"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="6">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18dp"
            android:visibility="visible"
            android:id="@+id/text1Hotels"
            android:text="@string/text1Hotels"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14dp"
            android:visibility="gone"
            android:id="@+id/text2Hotels"
            android:text="@string/text2Hotels"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14dp"
            android:visibility="gone"
            android:id="@+id/text3Hotels"
            android:text="@string/text3Hotels"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_return"
            android:text="@string/button_return"/>
    </LinearLayout>

</LinearLayout>
